WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150416
Print out the render tree from command line.
https://bugs.webkit.org/show_bug.cgi?id=150416
Summary
Print out the render tree from command line.
alan
Reported
2015-10-21 14:28:05 PDT
notifyutil -p com.apple.WebKit.showRenderTree
Attachments
Patch
(4.71 KB, patch)
2015-10-21 14:34 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.59 KB, patch)
2015-10-21 21:12 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-10-21 14:34:40 PDT
Created
attachment 263740
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-10-21 18:43:29 PDT
Comment on
attachment 263740
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263740&action=review
> Source/WebCore/platform/Logging.cpp:32 > +#if PLATFORM(COCOA)
Space above this I think.
> Source/WebCore/rendering/RenderObject.cpp:82 > +#if PLATFORM(COCOA) > +#include <notify.h> > +#endif
Don't need this here.
Tim Horton
Comment 3
2015-10-21 18:50:14 PDT
Comment on
attachment 263740
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=263740&action=review
> Source/WebCore/ChangeLog:7 > + to print out the rendere tree for the live documents.
rendere!
> Source/WebCore/rendering/RenderObject.cpp:2236 > + fprintf(stderr, "----------------------mainframe--------------------------\n");
main frame?
alan
Comment 4
2015-10-21 21:12:55 PDT
Created
attachment 263789
[details]
Patch
WebKit Commit Bot
Comment 5
2015-10-21 23:11:36 PDT
Comment on
attachment 263789
[details]
Patch Clearing flags on attachment: 263789 Committed
r191439
: <
http://trac.webkit.org/changeset/191439
>
WebKit Commit Bot
Comment 6
2015-10-21 23:11:42 PDT
All reviewed patches have been landed. Closing bug.
Hong
Comment 7
2015-12-16 09:39:17 PST
When I am building debug mode, the build failed ../../lib/libWPEWebKit.so.0.0.1: error: undefined reference to 'WebCore::Frame::isMainFrame() const' Since Frame::isMainFrame() is inline function defined in MainFrame.h, The change made here introduce reference to isMainFrame without using #include "MainFrame.h" Is that the cause of above build failure?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug