Print out the render tree from command line. https://bugs.webkit.org/show_bug.cgi?id=150416

Use system-wide notification server (https://developer.apple.com/library/mac/documentation/Darwin/Reference/ManPages/man3/notify_register_dispatch.3.html)
to print out the render tree for the live documents.

Usage: notifyutil -p com.apple.WebKit.showRenderTree

Reviewed by Simon Fraser.

No change in functionality.

* platform/Logging.cpp:
(WebCore::registerNotifyCallback):
* platform/Logging.h:
* rendering/RenderObject.cpp:
(WebCore::RenderObject::RenderObject):
(WebCore::printRenderTreeForLiveDocuments):


Canonical link: https://commits.webkit.org/168602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191439 268f45cc-cd09-0410-ab3c-d52691b4dbfc