Source/WebCore/platform/Logging.cpp
@@ -30,6 +30,10 @@
 #include <wtf/text/CString.h>
 #include <wtf/text/WTFString.h>
 
+#if PLATFORM(COCOA)
+#include <notify.h>
+#endif
+
 #if !LOG_DISABLED
 
 namespace WebCore {
@@ -62,6 +66,18 @@ void initializeLoggingChannelsIfNecessary()
 
     WTFInitializeLogChannelStatesFromString(logChannels, logChannelCount, logLevelString().utf8().data());
 }
+
+#ifndef NDEBUG
+void registerNotifyCallback(const String& notifyID, std::function<void()> callback)
+{
+#if PLATFORM(COCOA)
+    int token;
+    notify_register_dispatch(notifyID.utf8().data(), &token, dispatch_get_main_queue(), ^(int) {
+        callback();
+    });
+#endif
+}
+#endif
 
 }
 
